Removing virtual list for now

--- a/src/App.html
+++ b/src/App.html
@@ -1,4 +1,5 @@
-<Calendar ref:cal {start} {end} format="mm/dd/yyyy" />
+<Calendar ref:cal format="mm/dd/yyyy" />
+<!-- <Calendar ref:cal {start} {end} format="mm/dd/yyyy" /> -->
 
 <script>
 	export default { 
