--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset='utf8'>
-	<meta name='viewport' content='width=device-width'>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 	<title>Svelte app</title>
 
