--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<title>Svelte app</title>
 
 	<link rel='stylesheet' href='global.css'>
-	<link rel='stylesheet' href='bundle.css'>
+	<link rel='stylesheet' href='test.css'>
 	<style>
 		html {
 			box-sizing: border-box;
@@ -19,6 +19,6 @@
 </head>
 
 <body>
-	<script src='bundle.js'></script>
+	<script src='test.js'></script>
 </body>
 </html>
