--- a/index.html
+++ b/index.html
@@ -1,63 +1,24 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <meta charset="utf8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
+<head>
+	<meta charset='utf8'>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <title>Svelte app</title>
+	<title>Svelte app</title>
 
-    <link rel="stylesheet" href="global.css" />
-    <link rel="stylesheet" href="bundle.css" />
-    <style>
-      html {
-        box-sizing: border-box;
-      }
-      body {
-        padding: 0;
-        margin: 0;
-        background: #eee;
-      }
-      *,
-      *:before,
-      *:after {
-        box-sizing: border-box;
-      }
-      .container {
-        text-align: center;
-        max-width: 800px;
-        margin: 0 auto;
-        height: 100vh;
-        padding-top: 100px;
-        background: #fff;
-      }
-      h2 {
-        margin-bottom: 250px;
-      }
-    </style>
-  </head>
+	<link rel='stylesheet' href='public/global.css'>
+	<link rel='stylesheet' href='public/test.css'>
+	<style>
+		html {
+			box-sizing: border-box;
+		}
+		*, *:before, *:after {
+			box-sizing: border-box;
+		}
+	</style>
+</head>
 
-  <body>
-    <div class="container">
-      <h2>Testing usage without Svelte</h2>
-      <div style="display: inline-block" class="button-container">
-        <button id="test">Test button</button>
-      </div>
-    </div>
-
-    <script src="bundle.js"></script>
-    <script>
-      var trigger = document.getElementById('test');
-      var cal = new SvelteCalendar({ 
-        target: document.querySelector('.button-container'),
-        anchor: trigger, 
-        data: { 
-          trigger: trigger
-        }
-      });
-    </script>
-    
-  </body>
+<body>
+	<script src='/public/test.js'></script>
+</body>
 </html>
