--- a/src/App.html
+++ b/src/App.html
@@ -11,7 +11,7 @@
 		<li>IE11+ Compatible</li>
 		<li>Usable as a Svelte component</li>
 		<li>Usable with Vanilla JS / &lt;Your Framework Here&gt;</li>
-		<li>Usable as custom element</li>
+		<li>Can be compiled to a native web component / custom element</li>
 		<li>Mobile/thumb friendly</li>
 		<li>Keyboard navigation (arrows, pgup/pgdown, tab, esc)</li>
 	</ul>
