--- a/src/App.html
+++ b/src/App.html
@@ -2,7 +2,7 @@
 <div class="container">
 	<p>A lightweight date picker written with Svelte. Here is an example: </p>
 
-	<Datepicker format="{dateFormat}" />
+	<Datepicker format="{dateFormat}" start={new Date()} end={new Date()} />
 	<!-- <Datepicker ref:cal {start} {end} format="mm/dd/yyyy" /> -->
 
 	<p>This component can be used with or without the Svelte compiler.</p>
@@ -61,6 +61,12 @@ var cal = new SvelteCalendar(&#123;
 			</button>
 		</Datepicker>
 	</div>
+
+	<p>You can confine the date selection range with start and end:</p>
+
+	<div class="text-center">
+		<Datepicker format="{dateFormat}" start={new Date()} end={inOneWeek} />
+	</div>
 </div>
 
 <style>
@@ -97,11 +103,16 @@ var cal = new SvelteCalendar(&#123;
 	  data() {
 	    return {
 	      start: new Date(),
-	      dateFormat: "#{l}, #{F} #{j}, #{Y}"
+				dateFormat: "#{l}, #{F} #{j}, #{Y}"
 	    };
 	  },
 	  computed: {
-	    end: ({ start }) => new Date(start.getTime() + 1000 * 3600 * 24 * 720)
+			end: ({ start }) => new Date(start.getTime() + 1000 * 3600 * 24 * 720),
+			inOneWeek: ({ start }) => {
+				const date = new Date(start)
+				date.setDate(date.getDate() + 7)
+				return date
+			}
 	  },
 	  components: {
 	    Datepicker: "./Components/Datepicker.html"
