--- a/src/App.html
+++ b/src/App.html
@@ -1,67 +1,8 @@
-<h1>SvelteCalendar</h1>
-<div class="container">
-	<p>A lightweight date picker written with Svelte. Here is an example: </p>
+<script>
+	import Datepicker from './Components/Datepicker.html';
+</script>
 
-	<Datepicker format="{dateFormat}" />
-	<!-- <Datepicker ref:cal {start} {end} format="mm/dd/yyyy" /> -->
-
-	<p>This component can be used with or without the Svelte compiler.</p>
-	<ul>
-		<li>Lightweight (~8KB)</li>
-		<li>IE11+ Compatible</li>
-		<li>Usable as a Svelte component</li>
-		<li>Usable with Vanilla JS / &lt;Your Framework Here&gt;</li>
-		<li>Can be compiled to a native web component / custom element</li>
-		<li>Mobile/thumb friendly</li>
-		<li>Keyboard navigation (arrows, pgup/pgdown, tab, esc)</li>
-	</ul>
-
-	<p>Above you can see the default styling of this component.  This will be created for you by default when using the component but you can also pass in your own calendar 'trigger' either as a slot (custom element or svelte) or as a DOM node reference (use as vanilla JS).  Here are some examples:</p>
-
-	<h4>With Svelte:</h4>
-	<pre><code class="html">
-&lt;Datepicker format={dateFormat} bind:formattedSelected bind:dateChosen&gt;
-  &lt;button class="custom-button"&gt;
-    &#123;#if dateChosen} Chosen: &#123;formattedSelected} &#123;:else} Pick a date &#123;/if}
-  &lt;/button&gt;
-&lt;/Datepicker&gt;
-	</code></pre>
-
-	<div class="text-center">
-		<Datepicker format={dateFormat} bind:formattedSelected bind:dateChosen>
-			<button class="custom-button">
-				{#if dateChosen} Chosen: {formattedSelected} {:else} Pick a date {/if}
-			</button>
-		</Datepicker>
-	</div>
-
-	<h4>Without Svelte HTML:</h4>
-	<pre><code class="html">
-&lt;div class="button-container"&gt;
-  &lt;button id="test"&gt;My Custom Button&lt;/button&gt;
-&lt;/div&gt;
-	</code></pre>
-
-	<h4>Without Svelte JS:</h4>
-	<pre><code class="js">
-var trigger = document.getElementById('test');
-var cal = new SvelteCalendar(&#123; 
-  target: document.querySelector('.button-container'),
-  anchor: trigger, 
-  data: &#123;
-    trigger: trigger
-  }
-});
-	</code></pre>
-
-	<div class="text-center">
-		<Datepicker bind:formattedSelected=exampleFormatted bind:dateChosen=exampleChosen>
-			<button id="test">
-				{#if exampleChosen} {exampleFormatted} {:else}  Custom Button {/if}
-			</button>
-		</Datepicker>
-	</div>
-</div>
+<Datepicker />
 
 <style>
 	h1 { 
@@ -91,23 +32,3 @@ var cal = new SvelteCalendar(&#123;
 	  text-align: right;
 	}
 </style>
-
-<script>
-	export default {
-	  data() {
-	    return {
-	      start: new Date(),
-	      dateFormat: "#{l}, #{F} #{j}, #{Y}"
-	    };
-	  },
-	  computed: {
-	    end: ({ start }) => new Date(start.getTime() + 1000 * 3600 * 24 * 720)
-	  },
-	  components: {
-	    Datepicker: "./Components/Datepicker.html"
-		},
-		oncreate() { 
-			hljs.initHighlightingOnLoad();
-		}
-	};
-</script>
