fix: update gh-pages title

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="global.css">
   <link href="https://fonts.googleapis.com/css?family=Rajdhani:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/rainbow.min.css">
-  <title>Snowpack App</title>
+  <title>svelte-calendar</title>
 </head>
 
 <body>
