fix: update gh-pages title

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="shortcut icon" href="%BASE_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Web site created using create-snowpack-app" />
-  <link rel="stylesheet" href="global.css">
+  <meta name="description" content="Documentation/Demo for github.com/6edesign/svelte-calendar svelte-calendar" />
+  <link rel="stylesheet" href="%BASE_URL%/global.css">
   <link href="https://fonts.googleapis.com/css?family=Rajdhani:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/rainbow.min.css">
   <title>svelte-calendar</title>
@@ -14,7 +14,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <script type="module" src="/_dist_/index.js"></script>
+  <script type="module" src="%BASE_URL%/_dist_/index.js"></script>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
